[package]
name = "http-two-cookies"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"  # framework web
axum-server = { version = "0.8", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] } # runtime async
tokio-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] } # Serialize/Deserialize
serde_json = "1.0" # JSON handling
jsonwebtoken = "8" # JWT creation/validation
rand = "0.8" # CSRF token aleatorio
tower-cookies = "0.11.0"
tower-http = { version = "0.5", features = ["cors", "trace"] } # CORS, logging
subtle = "2.4" # constant time comparison for CSRF
tower = "0.5.3"
once_cell = "1.18"
dotenvy = "0.15.7"
dirs = "5.0"